--- a/index.html
+++ b/index.html
@@ -4,31 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiger-Hen-Worm-Stick</title>
+    <title>Tiger, Hen, Worm, Stick</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <audio id="background-music" preload="auto">
+      <source src="/project-1/sounds/background-music.mp3" type="mp3" />
+    </audio>
     <div class="game-wrapper">
       <header class="game-header">
-        <h1>Tiger-Hen-Worm-Stick</h1>
-        <p>Player score: <span id="player-score">0</span></p>
-        <p>Computer score: <span id="computer-score">0</span></p>
-        <p id="rule">🐯 ⇨ 🐓 ⇨ 🐛 ⇨ 🥖⇨ 🐯 🔄</p>
+        <h1>Tiger, Hen, Worm, Stick</h1>
+        <div class="title-second-line">
+          <div class="player-score">
+            <p>Player score: <span id="player-score">0</span></p>
+          </div>
+          <div class="computer-score">
+            <p>Computer score: <span id="computer-score">0</span></p>
+          </div>
+        </div>
+        <!-- <div class="rule">
+          <p>Rule: 🐯 ➡ 🐓 ➡ 🐛 ➡ 🥖 ➡ 🐯 🔄</p>
+        </div> -->
+        <p id="round">0 / 5</p>
       </header>
       <div class="game-area">
         <div class="player-area player">
           <div class="player-choice">
             <span class="player-choice-selection">
-              <button id="select-pic-previous">◀</button>
+              <button id="select-pic-previous" class="button picture-selection">
+                &#8249;
+              </button>
             </span>
             <span class="player-choice-picture" id="selected-pic"> </span>
             <span class="player-choice-selection">
-              <button id="select-pic-next">▶</button>
+              <button id="select-pic-next" class="button picture-selection">
+                &#8250;
+              </button>
             </span>
           </div>
           <div class="player-actions">
-            <button id="confirm-select">Yeay, you</button>
-            <button id="play-again">Play again 🔄</button>
+            <button id="confirm-select" class="button">Yeah, you</button>
+            <button id="play-again" class="button">Play again 🔄</button>
           </div>
         </div>
         <div class="player-area computer">
@@ -52,7 +68,7 @@
           class="hide"
         />
       </div>
-      <button id="play-again-outside">Play again 🔄</button>
+      <button id="play-again-outside" class="button">Play again 🔄</button>
     </div>
     <script src="./script.js"></script>
   </body>
