modified final result pictures location

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </div>
       <div class="final-result-picture">
         <img
-          src="/project-1/images/looser.jpeg"
+          src="images/looser.jpeg"
           alt="looser"
           id="looser-pic"
           class="hide"
         />
         <img
-          src="/project-1/images/kingcongrats.jpeg"
+          src="images/kingcongrats.jpeg"
           alt="congrats"
           id="congrats-pic"
           class="hide"
