code cleaned, rule updated, homepage polished

--- a/game.html
+++ b/game.html
@@ -10,9 +10,7 @@
   <body>
     <div class="game-wrapper">
       <header class="game-header">
-        <!-- <h1>Tiger, Hen, Worm, Stick</h1> -->
-
-        <div class="title-second-line">
+        <div class="title-line">
           <div><p id="round">0 / 5</p></div>
           <div class="player-score">
             <p>Player score: <span id="player-score">0</span></p>
@@ -74,8 +72,6 @@
         />
       </div>
 
-      <!-- <audio id="background-music" controls class="hide">
-        <source src="sounds/background-music.mp3" type="audio/mpeg" /> -->
       </audio>
       <audio id="win-music" controls class="hide">
         <source src="sounds/woohoo.mp3" type="audio/mpeg" />
