--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </head>
   <body>
     <div class="description">
-      <p>What?! A next-gen Rock, Paper, Scissors</p>
+      <p>Next-gen Rock, Paper, Scissors</p>
     </div>
 
-    <h1>Tiger, Hen, Worm, Stick</h1>
+    <div class="title-container">
+      <h1>Tiger, Hen, Worm, Stick</h1>
+    </div>
 
     <div class="start-container">
       <a href="game.html" class="start">Play Game</a>
